Modified package.json and added package-lock.json

--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "help": "cowsay -h",
+    "cows": "cowsay -l",
+    "cowsay": "cowsay"
   },
   "keywords": [],
   "author": "Deeshan Mahidas <G00295008@stu.raritanval.edu> (https://github.com/dmahida2002)",
-  "license": "MIT"
+  "license": "MIT",
+
+  "dependencies": {
+    "cowsay": "^1.5.0"
+  }
 }
